# multimodal-eval-platform

./: .env.example  .gitignore  Design-Doc.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: getting-started.md  tech-stack.md
docs/decisions/: 0001-three-plane-separation.md  0002-postgres-plus-iceberg.md  0003-llm-as-judge-provider-abstraction.md  0004-versioned-sandboxed-metrics.md  0005-immutable-content-addressed-datasets.md  0006-temporal-workflow-engine.md  0007-bootstrap-cis-paired-permutation.md  0008-rest-first-grpc-deferred.md  0009-htmx-ui.md  0010-single-launch-migration.md  0011-metric-loader-sandbox-gap.md  0012-iceberg-stand-in.md  README.md
docs/runbooks/: README.md  calibration-drift.md  judge-gateway-outage.md  judge-token-budget-exhausted.md  postgres-failover.md  run-flood.md
examples/: captioner_classic.yaml  captioner_judge.yaml
infra/chaos/: README.md  judge-gateway-down.yaml  object-store-zone-loss.yaml  postgres-failover.yaml  run-flood.js  run-flood.yaml
infra/docker/: Dockerfile.service
infra/k8s/: README.md
infra/llm-stub/: server.py
infra/perf/: README.md  load.js  smoke.js  soak.js
melp/: __init__.py
melp/cli/: main.py
melp/common/: audit.py  auth.py  cache.py  config.py  db.py  errors.py  ids.py  kms.py  models.py  quota.py  schemas.py  service_base.py  storage.py  telemetry.py  webhooks.py
melp/judge/: __init__.py  cache.py  calibration.py  orchestrator.py  prompts.py
melp/metrics/: __init__.py  base.py  classic.py  probability.py  registry.py  sandbox.py  speech.py  text.py  vision.py
melp/scripts/: dlq_replay.py  reproducibility_check.py  run_all.py  seed_dev.py
melp/sdk/: __init__.py  client.py
melp/services/aggregator/: app.py
melp/services/audit/: app.py  routes.py
melp/services/authz/: app.py
melp/services/dataset/: app.py  routes.py
melp/services/gateway/: app.py
melp/services/judge_config/: app.py  routes.py
melp/services/judge_orch/: app.py
melp/services/metric/: app.py  routes.py
melp/services/model/: app.py  routes.py
melp/services/project/: app.py  routes.py
melp/stats/: __init__.py  bootstrap.py  significance.py
melp/workers/: aggregator.py  iceberg_writer.py  metric_pool.py  ray_runner.py  runner.py
melp/workflows/: dispatch.py  eval_workflow.py
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/unit/: test_gateway_app.py  test_gating.py  test_iceberg_writer.py  test_ids_and_schemas.py  test_judge_prompts.py  test_kms.py  test_metric_sandbox.py  test_metrics_classic.py  test_metrics_probability.py  test_metrics_speech.py  test_metrics_text.py  test_metrics_vision.py  test_registry_loading.py  test_stats.py
(+14 files in other folders)
