[project]
name = "melp"
version = "0.1.0"
description = "Multimodal Evaluation & Learning Platform"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "passlib>=1.7",
    "boto3>=1.34",
    "python-ulid>=2.2",
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "tenacity>=8.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "structlog>=24.1",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.9",
    "factory-boy>=3.3",
]
ray = ["ray[default]>=2.10"]
temporal = ["temporalio>=1.5"]
judge = ["tiktoken>=0.6"]
metrics-text = ["sacrebleu>=2.4", "rouge-score>=0.1.2"]
metrics-vision = ["pillow>=10.2"]
metrics-speech = ["jiwer>=3.0"]

[project.scripts]
melp = "melp.cli.main:cli"
melp-gateway = "melp.services.gateway.app:run"
melp-authz = "melp.services.authz.app:run"
melp-run = "melp.services.run.app:run"
melp-dataset = "melp.services.dataset.app:run"
melp-model = "melp.services.model.app:run"
melp-metric = "melp.services.metric.app:run"
melp-judge-config = "melp.services.judge_config.app:run"
melp-project = "melp.services.project.app:run"
melp-audit = "melp.services.audit.app:run"
melp-aggregator = "melp.services.aggregator.app:run"
melp-judge-orch = "melp.services.judge_orch.app:run"
melp-worker = "melp.workers.runner:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["melp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
# E501: enforced by formatter not linter
# N818: HTTP-style exception names (NotFound, Forbidden) are clearer than NotFoundError
# B008: FastAPI's Depends/Body/Query pattern relies on call-in-default
# E741: ``l`` is fine for line-iteration locals in tight scopes
# N806: classical stats formulas use uppercase TP/FP/P/R/F1 — match the math
ignore = ["E501", "N818", "B008", "E741", "N806"]

[tool.ruff.lint.per-file-ignores]
"melp/workflows/eval_workflow.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
